unpackaged/main/default/objects/BLND_DFDT_Highlight__c/BLND_DFDT_Highlight__c.object-meta.xml
<CustomObject>
	<label>DreamTeam Highlight</label>
	<nameField>
		<label>Highlight Name</label>
		<type>Text</type>
	</nameField>
	<pluralLabel>DreamTeam Highlights</pluralLabel>
	<sharingModel>ReadWrite</sharingModel>
</CustomObject>