unpackaged/main/default/objects/BLND_DFDT_Highlight__c/fields/BLND_Extra_Field__c.field-meta.xml
<CustomField>
	<fullName>BLND_Extra_Field__c</fullName>
	<label>Extra Field</label>
	<type>TextArea</type>
</CustomField>