unpackaged/main/default/objects/BLND_DFDT_Highlight__c/fields/BLND_Highlight_Owner__c.field-meta.xml
<CustomField>
	<fullName>BLND_Highlight_Owner__c</fullName>
	<deleteConstraint>SetNull</deleteConstraint>
	<label>Highlight Owner</label>
	<referenceTo>User</referenceTo>
	<relationshipName>R00N30000002PYgoEAG</relationshipName>
	<type>Lookup</type>
</CustomField>