unpackaged/main/default/objects/BLND_DFDT_Highlight__c/fields/BLND_Include_in_Weekly_Dashboard__c.field-meta.xml
<CustomField>
	<fullName>BLND_Include_in_Weekly_Dashboard__c</fullName>
	<defaultValue>false</defaultValue>
	<label>Include in Weekly Dashboard</label>
	<type>Checkbox</type>
</CustomField>